# DominosOptimizer

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  backup.sql  database.db  databaseSchema.sql
src/: dataLoader.cpp  dataLoader.h  graph.cpp  graph.h  graphGenerator.cpp  graphGenerator.h  main.cpp  pizza.h  toping.h
